<resources>
    <string name="app_name"> القديم مساجد</string>

    <string name="nameerr">ادخل اسم صحيح </string>
    <string name="UserName">اسم المستخدم</string>
    <string name="Password">كلمة المرور</string>
    <string name="usernamerr">ادخل اسم مستخدم صحيح</string>
    <string name="usernamerr2">اسم المستخدم موجود مسبقاً</string>
    <string name="emailerr">الرجاء ادخال بريد الكتروني صحيح</string>
    <string name="phoneerr">الرجاء ادخال رقم هاتف صحيح</string>
    <string name="passerr">كلمة المرور يجب أن تكون 6 خانات وتحوي أحرف كبيرة وصغيرة و رموز </string>
    <string name="cnfpasserr">كلمة المرور غير متطابقة</string>
    <string name="login">تسجيل الدخول</string>
    <string name="logOut">تسجيل الخروج</string>

    <string name="notification">الرجاء تسجيل الدخول لتتمكن من ارسال ملاحظة</string>
    <string name="Register">مستخدم جديد؟</string>
    <string name="ForgotPassword">هل نسيت كلمة المرور؟</string>


    <!-- LogIn SharedPrefrencess -->
    <string name="login_preferences">com.apps.noura.masajd_shared_preferences_LogIn</string>
    <string name="login_status_preferences">com.apps.noura.masajd_shared_preferences_status</string>


    <!-- Monirah -->
    <string name="search">أدخل كلمة البحث</string>
    <string name="mosqueName">إسم المسجد</string>
    <string name="Text_name_Tag">إسم المسجد:</string>
    <string name="Text_name">  </string>
    <string name="Back">الرجوع</string>
    <string name="MosqueInfo">معلومات المسجد</string>
    <string name="MosqueDistrict">الحي</string>
    <string name="MosqueImage">صورة المسجد</string>
    <string name="MosqueType">فئه المسجد</string>
    <string name="District">الحي</string>
    <string name="MosqueRegion">المنطقة</string>
    <string name="CityVillage">المدينة</string>
    <string name="ImamName">إسم الإمام </string>
    <string name="MoathenName">إسم المؤذن</string>
    <string name="KhateebName"> إسم الخطيب</string>
    <string name="ObserverName"> إسم المراقب </string>
    <string name="StreetName">إسم الشارع</string>
    <string name="MosqueDistance">المسافة</string>
    <string name="DawaTitle">عنوان المنشط </string>

    <string name="search_Button">بحث</string>
    <string name="Exit_Button">الغاء</string>
    <string name="Ok_Button">موافق</string>

    <string name="Null">غير متوفر</string>
    <string name="hello_blank_fragment">الصور</string>
    <string name="title_activity_mosque_information">مسجد</string>

    <!-- Advance search -->
    <string name="Mosque">إسم المسجد</string>
    <string name="Imam">إسم الإمام</string>
    <string name="Khateeb">إسم الخطيب</string>
    <string name="All">الغــاء</string>

    <!-- -->

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="NoImage">لا تتوفر صور لهذا المسجد</string>
    <!-- Dawa Activity -->
    <string name="DawaImage">صورة المنشط</string>
    <string name="DawaInfo">معلومات المنشط</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_advance_search">البحث المتقدم</string>
    <string name="action_settings">Settings</string>

    <!-- Spinner -->
    <string name="spinnerActivity">نوع النشاط</string>
    <string name="spinnerDomian">مجال النشاط</string>
    <string name="language">اللغة</string>
    <string name="office">المكتب</string>
    <string name="fromDate">من تاريخ</string>
    <string name="toDate">الى تاريخ</string>
    <string name="title_activity_new_maps">الخريطة</string>

    <!-- SEARCH -->
    <string name="search_view">بحث</string>
    <string name="search_hint">أدخل كلمة البحث</string>
    <string name="title_activity_favorite">المفضله </string>
    <string name="AddNewNote">إضافة ملاحظه جديدة</string>
    <!--Favorite -->

    <string name="Favorite">لم تقم بتسجيل الدخول</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!--Dawa -->
    <string name="NameTag">عنوان المنشط</string>
    <string name="ActivityType">نوع النشاط</string>
    <string name="MainClassification">التصنيف الرئيسي</string>
    <string name="SubClassification">التصنيف الفرعي</string>
    <string name="Dawa_Office">المكتب</string>
    <string name="Date">التاريخ</string>
    <string name="Time">الوقت</string>
    <string name="Repetition">التكرار</string>
    <string name="Preacher">الداعية</string>
    <string name="Language">اللغة</string>
    <string name="WomanRoom">قاعة النساء</string>
    <string name="Distance">المسافة</string>
    <string name="Evaluation">التقييم</string>
    <string name="SubjectOfTheDawa">عنوان المنشط</string>
    <string name="DaeiaName">إسم الداعية</string>

    <!-- Menu-->

    <string name="info">عن الوزارة</string>
    <string name="praytime">أوقات الصلاة</string>
    <string name="contactUs">اتصل بنا</string>
    <string name="ic_masijed">المساجد</string>
    <string name="Dawa">المناشط الدعوية</string>
    <string name="aboutApp"> عن التطبيق</string>
    <string name="favorit">المفضلة</string>
    <string name="maintenance">خدمات منسوبي الصيانة</string>
    <string name="observer">خدمات مراقبي المساجد </string>
    <string name="empServices">خدمات منسوبي المساجد </string>
    <string name="MainMenu">القائمة</string>

    <string name="open"> فتح</string>
    <string name="close">اغلاق</string>
    <string name="logo">شعار</string>

    <string name="kateebName">أدخل إسم الخطيب</string>
    <string name="InsertImamName">أدخل إسم الإمام</string>
    <string name="enter_date">ادخل التاريخ</string>
    <string name="ActivityName">أدخل عنوان المنشط</string>
    <string name="InsertMosqueName">أدخل كلمة البحث</string>
    <string name="Search_Filter">تصفية البحث</string>


    <string name="Email">   البريد الإلكتروني \n\n   info@moia.gov.sa </string>
    <string name="Email_Address">    البريد الإلكتروني </string>
    <string name="Telephone">الهاتف   \n\n  00966–11-223-6222</string>
    <string name="Location">العنوان  \n \n  المملكة العربية السعودية - الرياض  \n طريق الملك فهد بجوار برج الفيصلية  \n الرمز البريدي: 11232</string>
    <string name="AboutUs">تطبيق مساجد هو تطبيق رسمي و معتمد من وزارة الشؤون الإسلامية في المملكة العربية السعودية يهدف الى تقديم عدد من الخدمات المتنوعة</string>
    <string name="AboutUs1">يقدم التطبيق خدمة عرض المساجد القريبة من موقعك الحالي مدعومة بصور و معلومات عن المسجد</string>
    <string name="title_activity_main_advance_search">MainAdvanceSearch</string>
    <string name="title_activity_app_navigation_drawer">AppNavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tets">TetsActivity</string>
    <string name="title_activity_basic">BasicActivity</string>

    <!-- Pray Time -->

    <string name="image">صوة</string>
    <string name="PrayTimein"> مواقيت الصلاه في مدينة  </string>

    <!-- About App  -->
    <string name="AboutApp">عن التطبيق</string>
    <string name="AboutApp1">تطبيق مساجد هو تطبيق رسمي و معتمد من وزارة الشؤون الإسلامية في المملكة العربية السعودية يهدف الى تقديم عدد من الخدمات المتنوعة</string>
    <string name="AboutApp2">يقدم التطبيق خدمة عرض المساجد القريبة من موقعك الحالي مدعومة بصور و معلومات عن المسجد</string>
    <string name="start">إبدأ التطبيق</string>
    <string name="next">التالي</string>
    <string name="skip">تخطي</string>



</resources>
