<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/MainMenu"
        android:icon="@drawable/emps_ervices"
        android:title="@string/MainMenu">
    </item>

    <item
        android:id="@+id/login"
        android:icon="@drawable/sign_in"
        android:title="@string/login"
        android:visible="true">
    </item>

    <item
        android:id="@+id/logOut"
        android:icon="@drawable/sign_out"
        android:title="@string/logOut"
        android:visible="true">
    </item>

    <item
        android:id="@+id/ic_masijed"
        android:icon="@drawable/mosque_gbk"
        android:title="@string/ic_masijed">
    </item>


    <item
        android:id="@+id/ic_Dawa"
        android:icon="@drawable/ic_activity"
        android:title="@string/Dawa"
        android:visible="true">
    </item>

    <item
        android:id="@+id/ic_praytime"
        android:icon="@drawable/ic_praytime"
        android:title="@string/praytime">
    </item>

    <item
        android:id="@+id/empServices"
        android:icon="@drawable/emps_ervices"
        android:title="@string/empServices">
    </item>

    <item
        android:id="@+id/observer"
        android:icon="@drawable/observer"
        android:title="@string/observer">
    </item>

    <item
        android:id="@+id/maintenance"
        android:icon="@drawable/maintenance"
        android:title="@string/maintenance">
    </item>


    <item
        android:id="@+id/aboutApp"
        android:icon="@drawable/aboutapp"
        android:title="@string/aboutApp">
    </item>

    <item
        android:id="@+id/info"
        android:icon="@drawable/about"
        android:title="@string/info">
    </item>

    <item
        android:id="@+id/contactUs"
        android:icon="@drawable/messages"
        android:title="@string/contactUs">
    </item>








    <item
        android:id="@+id/ic_favorit"
        android:icon="@drawable/fav"
        android:title="@string/favorit"
        android:visible="false">
    </item>






</menu>