<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <!--<item
        android:id="@+id/ic_more"
        android:icon="@drawable/ic_more"
        android:title="المزيد">

    </item>
    -->
  <item
      android:id="@+id/info"
      android:icon="@drawable/about"
      android:title="@string/info">
  </item>

  <item
      android:id="@+id/contactUs"
      android:icon="@drawable/messages"
      android:title="@string/contactUs">
  </item>


  <item
      android:id="@+id/ic_masijed"
      android:icon="@drawable/mosque_gbk"
      android:title="@string/ic_masijed"
      >
  </item>

  <item
        android:id="@+id/ic_praytime"
        android:icon="@drawable/ic_praytime"
        android:title="@string/praytime">
    </item>


  <item
      android:id="@+id/aboutApp"
      android:icon="@drawable/aboutapp"
      android:title="@string/aboutApp">
  </item>



  <!--<item
        android:id="@+id/ic_activities"
        android:icon="@drawable/ic_activity"
        android:title="@string/Dawa"
       >
    </item>

    <item
        android:id="@+id/ic_favorit"
        android:icon="@drawable/addedfav"
        android:title="@string/favorit">
    </item>-->


</menu>