<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1.5dp"
    android:id="@+id/linearLayoutInfo"
    android:orientation="vertical"
    android:background="@color/lightGry"
    >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/MosqueType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"
            />


        <TextView
            android:id="@+id/Mosque_Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MosqueType" />


</RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/MosqueRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/Mosque_Region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MosqueRegion" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/CityVillage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/City_Village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CityVillage" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/District"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/District_Tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/District" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/StreetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/Street_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StreetName" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ImamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:id="@+id/Imam_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ImamName" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/KhateebName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:id="@+id/Khateeb_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/KhateebName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/MoathenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/Moathen_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MoathenName" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ObserverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Null"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/Observer_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ObserverName" />

</RelativeLayout>


</LinearLayout>
