<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_view"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText|collapseActionView"/>

    <item
        android:id="@+id/SearchFilter"
        android:icon="@drawable/if_filter"
        android:title="@string/Search_Filter"
        app:showAsAction="always"
        >
    </item>


    <item
        android:id="@+id/Refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/Null"
        app:showAsAction="always">
    </item>
</menu>


    <!--<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.apps.noura.masajd.MosqueActivity">
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.widget.SearchView"/>
    </menu>-->