<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.apps.noura.masajd.MosqueInformation">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:background="@drawable/border_style"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="5dp">



        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:tag="TETS"
            android:layout_height="wrap_content" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="1.2dp"
        android:orientation="vertical"
        android:padding="1.2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MosqueType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />


            <TextView
                android:id="@+id/Mosque_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/MosqueType" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MosqueRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/Mosque_Region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MosqueRegion" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CityVillage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/City_Village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CityVillage" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/District"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/District_Tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/District" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/StreetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/Street_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StreetName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ImamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />


            <TextView
                android:id="@+id/Imam_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ImamName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/KhateebName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />


            <TextView
                android:id="@+id/Khateeb_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/KhateebName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MoathenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/Moathen_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MoathenName" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ObserverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Null" />

            <TextView
                android:id="@+id/Observer_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ObserverName" />
        </RelativeLayout>
    </GridLayout>

    <!-- <android.support.v7.widget.RecyclerView
        android:id="@+id/MosqueRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </android.support.v7.widget.RecyclerView>
    -->

</LinearLayout>