<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.noura.masajd.MosquSearch.MainAdvanceSearch"
    tools:showIn="@layout/activity_main_advance_search"

    >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="2pt"

    android:id="@+id/RadioGroup">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mosque"
            android:id="@+id/radioButton"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:checked="false"
             />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"

            android:text="@string/Khateeb"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imam"
            android:id="@+id/radioButton2"

            android:checked="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </RadioGroup>

</LinearLayout>

    <LinearLayout
        android:id="@+id/SearchContentbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/RadioGroup">

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_box"

            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SearchContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchContentbar">



        <include layout="@layout/mosque_search"></include>
    </LinearLayout>



</RelativeLayout>
