<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1.5dp"
    android:background="@drawable/border_style"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





      <!--
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

       <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
-->
    <TextView
        android:id="@+id/Distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="1dp"
        android:layout_marginBottom="5.5dp"
        android:layout_weight="1"
        android:gravity="end"
        android:padding=".5dp"
        android:text="@string/MosqueDistance"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        tools:ignore="SmallSp" />



<!--
      <TextView
            android:id="@+id/DawaDistrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/District"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
          />-->


            <TextView
                android:id="@+id/PreacherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center"
                android:text="@string/Preacher"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:paddingTop="1dp"/>

        <!--   <TextView
                android:id="@+id/DawaInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingBottom="5dp"
                android:text="معلومات المنشط"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        -->
            <TextView
                android:id="@+id/DawaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|fill_vertical"
                android:layout_margin=".5dp"
                android:gravity="center_horizontal"
                android:text="@string/NameTag"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded"
               />


            <ImageView
                android:id="@+id/DawaImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start|fill_vertical"
                android:layout_margin="8dp"
                android:scaleType="fitStart"
                tools:padding="2dp"
                android:radius="15dp"
                android:contentDescription="@string/DawaImage"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                tools:ignore="RtlHardcoded" />

<!-- </RelativeLayout>

        </GridLayout>
 -->


    </android.support.v7.widget.CardView>
</LinearLayout>


